# psai

./: .gitignore  CHANGELOG.md  README.md  README.ru.md  build.sh  psai.sh  versions.json  versions.json.sig
.github/workflows/: ci.yml
assets/: psai-dashboard.py
docs/: ARCHITECTURE.md  ARCHITECTURE.ru.md
lib/: 00-header.sh  05-banner.sh  10-i18n.sh  20-helpers.sh  50-domains.sh  60-config.sh  70-profile.sh  74-watchdog.sh  77-vault.sh  80-egress.sh  81-hosts.sh  82-caddy.sh  84-compose.sh  85-mcp.sh  88-install.sh  90-lifecycle.sh  92-dashboard.sh  93-python-dashboard.sh  96-cron.sh  99-main.sh
tests/: psai.bats
vault/: Cargo.toml
vault/src/: main.rs
